# rust-ssh-tauri-desktop

./: README.md  index.html  package.json  update.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  Bak.vue  main.ts
src-tauri/: Cargo.toml  gemini_ssh_v2.redb  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  p2p.rs  redis_manager.rs  security.rs  sync.rs
src/assets/css/: app.scss  base.scss
src/components/: AiAssistantPanel.vue  ChatPanel.vue  QuickCommandPanel.vue  RedisCreateModal.vue  RedisManager.vue  ServerModal.vue  SftpManager.vue  Sidebar.vue  StatusBar.vue  SyncSettings.vue  TerminalTabs.vue  ThemeSettings.vue  TitleBar.vue  WorkspaceHeader.vue
src/utils/: Confirm.vue  Toast.vue  async.ts  confirm.ts  theme.ts  toast.ts
