[package]
name = "hiphup-terminal"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hiphup_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
russh = "0.45"
russh-keys = "0.45"
russh-sftp = "2.0.2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
redb = "2.1"
uuid = { version = "1.0", features = ["v4"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
machineid-rs = "1.2"
redis = { version = "0.27.0", features = ["tokio-comp"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
libp2p = { version = "0.56.0", features = ["tokio", "mdns", "noise", "yamux", "tcp", "macros", "request-response", "json", "serde"] }
